# gh-linker-bot

./: README.md  example.env  pyproject.toml
gh_linker/: __main__.py  bot.py  utils.py
gh_linker/cogs/: code_snippets.py  info.py
